# RetroBat-Marquee-Manager

./: README.md  READMESETUP.md
.github/workflows/: rust.yml
rust/marquee_manager_rs/: Cargo.toml  ESEvent.arg  es_systems.cfg
rust/marquee_manager_rs/.cargo/: config.toml
rust/marquee_manager_rs/src/: config.rs  events.rs  generator.rs  keyboard.rs  logger.rs  main.rs  marquee.rs  process.rs  registry.rs  state.rs  systems.rs
rust/retroachievements_rs/: Cargo.toml  config.ini
rust/retroachievements_rs/RA/API/: API_GetGameInfoAndUserProgress.php_game123.json  API_GetUserProfile.php_userTestUser.json
rust/retroachievements_rs/src/: api.rs  ipc.rs  log_monitor.rs  main.rs
rust/utility_rs/: Cargo.toml  scrap.pool
rust/utility_rs/src/: main.rs  scraper.rs  ws.rs
