[package]
name = "marquee_manager_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
quick-xml = { version = "0.22", features = ["serialize"] }
notify = "5.0"
rdev = "0.5"
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_ini = "0.2"
glob = "0.3.0"
url = "2.2"
