[package]
name = "retroachievements_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_ini = "0.2"
quick-xml = { version = "0.22", features = ["serialize"] }
regex = "1.5"
log = "0.4"
env_logger = "0.9"
glob = "0.3.0"
url = "2.2"
