[package]
name = "utility_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
tokio-tungstenite = "0.17"
futures-util = "0.3"
log = "0.4"
env_logger = "0.9"
serde_ini = "0.2"
url = "2.2"
